--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ compose-version = "2023.10.00"
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin-version" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android-version" }
+google-services = { id = "com.google.gms.google-services", version.require = "4.4.0"}
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.require = "1.12.0" }
@@ -20,6 +21,9 @@ compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+firebase-bom = { group = "com.google.firebase",name = "firebase-bom", version.require = "32.3.1" }
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx"}
+
 
 [bundles]
 compose = ["compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-ui-test-junit4", "compose-ui-tooling", "compose-ui-test-manifest"]
