--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,24 @@
 [versions]
-android-gradle-plugin-version = "8.1.1"
-kotlin-android-version = "1.9.0"
-lifecycle-runtime-verson = "2.6.2"
-compose-version = "2023.10.00"
+android-gradle-plugin = "8.1.1"
+kotlin-android = "1.9.0"
+lifecycle-runtime-ktx = "2.6.2"
+compose = "2023.10.00"
+paging = "3.2.1"
+hilt-android = "2.46"
+navigation = "2.7.4"
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "android-gradle-plugin-version" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android-version" }
-google-services = { id = "com.google.gms.google-services", version.require = "4.4.0"}
+android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
+google-services = { id = "com.google.gms.google-services", version.require = "4.4.0" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin-android" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt-android" }
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.require = "1.12.0" }
-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-verson" }
+lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.require = "1.7.2" }
-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-version" }
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose" }
 compose-ui = { group = "androidx.compose.ui", name = "ui" }
 compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
@@ -21,9 +26,33 @@ compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-firebase-bom = { group = "com.google.firebase",name = "firebase-bom", version.require = "32.3.1" }
-firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx"}
+compose-material = { group = "androidx.compose.material", name = "material", version.require = "1.5.3" }
 
+#Navigation
+navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation"}
+
+#Firebase
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.require = "32.3.1" }
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
+
+#Coil
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.require = "2.4.0" }
+
+#Paging 3
+paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
+paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
+
+#Hilt
+hilt-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.require = "1.0.0" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android" }
+hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-android" }
+
+#Accompanist
+accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.require = "0.33.2-alpha" }
 
 [bundles]
-compose = ["compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-ui-test-junit4", "compose-ui-tooling", "compose-ui-test-manifest"]
+compose = ["compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-ui-test-junit4", "compose-ui-tooling", "compose-ui-test-manifest", "compose-material"]
+hilt = ["hilt-compose", "hilt-android"]
+paging = ["paging-runtime", "paging-compose"]
+firebase = ["firebase-analytics", "firebase-firestore"]
