--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Read"
         tools:targetApi="31">
+
         <activity
             android:name=".main.presentation.activity.MainActivity"
             android:exported="true"
@@ -26,6 +27,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.parse.SERVER_URL"
+            android:value="@string/back4app_server_url" />
+
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="@string/back4app_application_id" />
+
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="@string/back4app_client_key" />
+
     </application>
 
 </manifest>
