--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ compose-material = "1.5.4"
 paging = "3.2.1"
 hilt-android = "2.48"
 navigation = "2.7.5"
+supabse = "1.4.7"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
@@ -35,13 +36,8 @@ compose-material-icons = { group = "androidx.compose.material", name = "material
 #Navigation
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 
-#Firebase
-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.require = "32.5.0" }
-firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
-firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
-
 #Coil
-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.require = "2.4.0" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.require = "2.5.0" }
 
 #Paging 3
 paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
@@ -55,16 +51,17 @@ hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-comp
 #Accompanist
 accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.require = "0.33.2-alpha" }
 
-#Algolia
-algolia-instant-search-compose = { group = "com.algolia", name = "instantsearch-compose", version.require = "3.+" }
-algolia-instant-search-paging = { group = "com.algolia", name = "instantsearch-android-paging3", version.require = "3.+" }
-
 #Gson
 gson = { group = "com.google.code.gson", name = "gson", version.require = "2.10.1"}
+
+#Supabase
+supabase-bom = { group = "io.github.jan-tennert.supabase", name = "bom", version.ref = "supabse" }
+supabase-storage-kt = { group = "io.github.jan-tennert.supabase", name = "storage-kt" }
+
+#Ktor Client
+ktor-client = { group = "io.ktor", name = "ktor-client", version.require = "2.3.6"}
 
 [bundles]
 compose = ["compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-ui-test-junit4", "compose-ui-tooling", "compose-ui-test-manifest", "compose-material", "compose-material-icons"]
 hilt = ["hilt-compose", "hilt-android"]
 paging = ["paging-runtime", "paging-compose"]
-firebase = ["firebase-analytics", "firebase-firestore"]
-aloglia = ["algolia-instant-search-compose", "algolia-instant-search-paging"]
