--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,8 @@ compose-material = "1.5.4"
 paging = "3.2.1"
 hilt-android = "2.48"
 navigation = "2.7.6"
+legacy-support-v4 = "1.0.0"
+recyclerview = "1.3.0"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
@@ -20,6 +22,13 @@ hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt-andr
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.require = "1.12.0" }
 lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
+
+#XML
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.require = "1.6.1"}
+material = { group = "com.google.android.material", name = "material", version.require = "1.11.0"}
+constraint = { group = "androidx.constraintlayout", name = "constraintlayout", version.require = "2.1.4"}
+
+#Compose
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.require = "1.8.2" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose" }
 compose-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -34,14 +43,21 @@ compose-material-icons = { group = "androidx.compose.material", name = "material
 
 #Navigation
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
+navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
 
 #Firebase
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.require = "32.7.0" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore-ktx" }
+firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx" }
 
 #Coil
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.require = "2.5.0" }
+coil = { group = "io.coil-kt", name = "coil", version.require = "2.5.0" }
+
+#Glide
+glide = { group = "com.github.bumptech.glide", name = "glide", version.require = "4.16.0" }
 
 #Paging 3
 paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
@@ -52,19 +68,22 @@ hilt-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", vers
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-android" }
 
-#Accompanist
-accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.require = "0.33.2-alpha" }
-
 #Algolia
 algolia-instant-search-compose = { group = "com.algolia", name = "instantsearch-compose", version.require = "3.+" }
 algolia-instant-search-paging = { group = "com.algolia", name = "instantsearch-android-paging3", version.require = "3.+" }
 
 #Gson
-gson = { group = "com.google.code.gson", name = "gson", version.require = "2.10.1"}
+gson = { group = "com.google.code.gson", name = "gson", version.require = "2.10.1" }
+
+#ViewBindingPropertyDelegate
+view-binding-property-delegate-noreflection = { group = "com.github.kirich1409", name = "viewbindingpropertydelegate-noreflection", version.require = "1.5.9" }
+legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacy-support-v4" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 
 [bundles]
 compose = ["compose-ui", "compose-ui-graphics", "compose-ui-tooling-preview", "compose-material3", "compose-ui-test-junit4", "compose-ui-tooling", "compose-ui-test-manifest", "compose-material", "compose-material-icons"]
 hilt = ["hilt-compose", "hilt-android"]
+navigation = ["navigation-compose", "navigation-fragment-ktx", "navigation-ui-ktx"]
 paging = ["paging-runtime", "paging-compose"]
-firebase = ["firebase-analytics", "firebase-firestore"]
+firebase = ["firebase-analytics", "firebase-firestore", "firebase-storage"]
 aloglia = ["algolia-instant-search-compose", "algolia-instant-search-paging"]
