--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ paging = "3.2.1"
 hilt-android = "2.48"
 navigation = "2.7.6"
 legacy-support-v4 = "1.0.0"
-recyclerview = "1.3.0"
+recyclerview = "1.3.2"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
@@ -24,9 +24,10 @@ core-ktx = { group = "androidx.core", name = "core-ktx", version.require = "1.12
 lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 
 #XML
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.require = "1.6.1"}
-material = { group = "com.google.android.material", name = "material", version.require = "1.11.0"}
-constraint = { group = "androidx.constraintlayout", name = "constraintlayout", version.require = "2.1.4"}
+activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.require = "1.8.2" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.require = "1.6.1" }
+material = { group = "com.google.android.material", name = "material", version.require = "1.11.0" }
+constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.require = "2.1.4" }
 
 #Compose
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.require = "1.8.2" }
