--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,8 @@ activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.req
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.require = "1.6.1" }
 material = { group = "com.google.android.material", name = "material", version.require = "1.11.0" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.require = "2.1.4" }
+circle-imageview = { group = "de.hdodenhof", name = "circleimageview", version.require = "3.1.0" }
+dots-indicator = { group = "com.tbuonomo", name = "dotsindicator", version.require = "5.0" }
 
 #Compose
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.require = "1.8.2" }
